[gd_scene load_steps=8 format=3 uid="uid://d2pc7cmbi3llr"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_1hjob"]
[ext_resource type="PackedScene" uid="uid://d013xkq7hxox4" path="res://scenes/gui.tscn" id="2_c15it"]
[ext_resource type="AudioStream" uid="uid://mq42leegesib" path="res://assets/audio/bg__loop.ogg" id="3_g8lg4"]
[ext_resource type="Texture2D" uid="uid://bu21kbh8go7vi" path="res://assets/images/background/bg-back.png" id="4_whupg"]
[ext_resource type="Texture2D" uid="uid://dc3833oayheeh" path="res://assets/images/background/bg-stars.png" id="5_7jsg2"]
[ext_resource type="Texture2D" uid="uid://dyjl2mttshjtj" path="res://assets/images/background/bg-preview.png" id="6_vekpe"]

[sub_resource type="Curve2D" id="Curve2D_rajyg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -42, -130, 0, 0, 0, 0, -40, -184, 0, 0, 0, 0, -54, -185, 0, 0, 0, 0, -57, -122, 0, 0, 0, 0, -57, -34, 0, 0, 0, 0, -44, -33, 0, 0, 0, 0, -44, -80, -2.5, 9, 2.5, -9, -42, -130)
}
point_count = 8

[node name="Level" type="Node2D" groups=["Level"]]
script = ExtResource("1_1hjob")

[node name="GUI" parent="." instance=ExtResource("2_c15it")]

[node name="Settings" type="Node" parent="."]

[node name="MusicBG" type="AudioStreamPlayer" parent="Settings"]
stream = ExtResource("3_g8lg4")
autoplay = true

[node name="Timer" type="Timer" parent="Settings"]
wait_time = 0.92
autostart = true

[node name="Background" type="Node" parent="."]

[node name="Back" type="Parallax2D" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Back"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Back/ParallaxLayer"]
texture = ExtResource("4_whupg")
centered = false

[node name="Stars" type="Parallax2D" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Stars"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Stars/ParallaxLayer"]
texture = ExtResource("5_7jsg2")
centered = false

[node name="Plate_1" type="Parallax2D" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Plate_1"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Plate_1/ParallaxLayer"]
texture = ExtResource("6_vekpe")
centered = false

[node name="Plate_2" type="Parallax2D" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Plate_2"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Plate_2/ParallaxLayer"]
texture = ExtResource("6_vekpe")
centered = false
offset = Vector2(272, 0)
flip_v = true

[node name="PathSpawn" type="Path2D" parent="."]
position = Vector2(320, 187)
curve = SubResource("Curve2D_rajyg")

[node name="PathFollow" type="PathFollow2D" parent="PathSpawn"]
position = Vector2(-42, -130)
rotation = -1.53378

[connection signal="timeout" from="Settings/Timer" to="." method="_on_timer_timeout"]
